2004-04-13  David Schleef  <ds@schleef.org>

	* configure.ac:  Disable various code when compiling for MinGW.
	* gst/elements/Makefile.am:
	* gst/elements/gstelements.c:
	* gst/elements/gstfdsrc.c: (gst_fdsrc_get):
	* gst/elements/gstfilesrc.c: (gst_filesrc_init), (gst_filesrc_get):
	* gst/registries/gstxmlregistry.c: (make_dir):

2004-04-13  David Schleef  <ds@schleef.org>

	* gst/Makefile.am:
	* gst/gstcpu.c: (gst_cpuid_i386): Convert asm source into inline
	assembly.
	* gst/gstcpuid_i386.s: remove

2004-04-13  David Schleef  <ds@schleef.org>

	* docs/gst/tmpl/gstaggregator.sgml: Random checkin because gtk-doc
	seems to think it needs to be done.
	* docs/gst/tmpl/gstfakesink.sgml:
	* docs/gst/tmpl/gstfakesrc.sgml:
	* docs/gst/tmpl/gstfdsink.sgml:
	* docs/gst/tmpl/gstfdsrc.sgml:
	* docs/gst/tmpl/gstfilesink.sgml:
	* docs/gst/tmpl/gstfilesrc.sgml:
	* docs/gst/tmpl/gstidentity.sgml:
	* docs/gst/tmpl/gstmd5sink.sgml:
	* docs/gst/tmpl/gstmultifilesrc.sgml:
	* docs/gst/tmpl/gstpipefilter.sgml:
	* docs/gst/tmpl/gstshaper.sgml:
	* docs/gst/tmpl/gstspider.sgml:
	* docs/gst/tmpl/gstspideridentity.sgml:
	* docs/gst/tmpl/gststatistics.sgml:
	* docs/gst/tmpl/gsttee.sgml:
	* docs/gst/tmpl/gsttypefind.sgml:
	* docs/gst/tmpl/gstutils.sgml:

2004-04-13  David Schleef  <ds@schleef.org>

	* configure.ac: Changes to remove POSIXisms (mmap in this case)
	and to build DLLs on Windows.
	* gst/Makefile.am:
	* gst/elements/gstfilesrc.c: (gst_filesrc_get),
	(gst_filesrc_open_file):
	* gst/schedulers/Makefile.am:

2004-04-13  David Schleef  <ds@schleef.org>

	* gst/gstcaps.c: (gst_caps_structure_fixate_field_nearest_int),
	(gst_caps_structure_fixate_field_nearest_double):  Fix bug in
	fixating lists.

2004-04-12  David Schleef  <ds@schleef.org>

	* gst/gstbuffer.c: (_gst_buffer_initialize), (gst_buffer_get_type),
	(gst_buffer_free_chunk): Added gst_buffer_get_type() and changed
	to using it.
	* gst/gstbuffer.h: Changed GST_BUFFER_TYPE to gst_buffer_get_type()